--- a/chrome_extension-master/manifest.json
+++ b/chrome_extension-master/manifest.json
@@ -15,7 +15,7 @@
       "32": "Images/icon.png"
     },
     "default_title": "Help_X",
-    "default_popup": "index.html"
+    "default_popup": "ext.html"
   },
   "options_page": "option.html",
   "permission": ["storage"]
